--- a/setup.cfg
+++ b/setup.cfg
@@ -14,13 +14,15 @@ max-line-length = 100
 exclude = .tox
 
 [tool:pytest]
-minversion = 3.1
+minversion = 3.6
 testpaths = tests
 mock_use_standalone_module = true
 addopts = --cov
 
 [coverage:run]
-source = pydplace
+source =
+    pydplace
+    tests
 
 [coverage:report]
 show_missing = true
