started work on dplace 3

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,81 @@
+[metadata]
+name = pydplace
+version = 3.0.0.dev0
+author = Robert Forkel
+author_email = robert_forkel@eva.mpg.de
+description = A cldfbench plugin to curate D-PLACE datasets
+long_description = file: README.md
+long_description_content_type = text/markdown
+keywords = linguistics
+license = Apache 2.0
+license_files = LICENSE
+url = https://github.com/D-PLACE/pydplace
+project_urls =
+    Bug Tracker = https://github.com/D-PLACE/pydplace/issues
+platforms = any
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
+    License :: OSI Approved :: Apache Software License
+
+[options]
+zip_safe = False
+packages = find:
+package_dir =
+    = src
+python_requires = >=3.8
+install_requires =
+    pybtex
+    attrs>=19.1
+    cldfbench
+    clldutils>=3.5.0
+    csvw>=1.6
+    pyglottolog>=3.0
+    pycldf>=1.14
+    fiona
+    shapely
+include_package_data = True
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+pycldf =
+    dataset_template/*
+    *.json
+    *.geojson
+
+[options.entry_points]
+console_scripts =
+    dplace = pydplace.__main__:main
+cldfbench.scaffold =
+    dplace_dataset = pydplace.scaffold:DatasetTemplate
+
+[options.extras_require]
+dev =
+    tox
+    flake8
+    wheel>=0.36
+    twine
+test =
+    pytest>=5
+    pytest-mock
+    pytest-cov
+    coverage>=4.2
+
 [easy_install]
 zip_ok = false
-
-[metadata]
-description-file = README.md
-license_file = LICENSE
 
 [bdist_wheel]
 universal = 1
@@ -26,3 +98,12 @@ source =
 [coverage:report]
 show_missing = true
 skip_covered = true
+
+[tox:tox]
+envlist = py38, py39, py310, py311, py312
+isolated_build = true
+skip_missing_interpreter = true
+
+[testenv]
+deps = .[test]
+commands = pytest {posargs}
