--- a/src/pydplace/dataset_template/.github/workflows/cldf-validation.yml
+++ b/src/pydplace/dataset_template/.github/workflows/cldf-validation.yml
@@ -1,10 +1,10 @@
-name: tests
+name: CLDF-validation
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10", "3.11"]
+        python-version: ["3.10"]
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
@@ -23,11 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
-        sudo apt-get update
-        sudo apt-get install gdal-bin libgdal-dev
-        pip install GDAL==3.2.3 
         pip install .[test]
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cldf-metadata=cldf/StructureDataset-metadata.json test.py
