--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pydplace
-version = 3.1.0
+version = 3.1.1.dev0
 author = Robert Forkel
 author_email = robert_forkel@eva.mpg.de
 description = A cldfbench plugin to curate D-PLACE datasets
